--- a/layered-puzzle-platformer/layered-puzzle-platformer/layered-puzzle-platformer.csproj
+++ b/layered-puzzle-platformer/layered-puzzle-platformer/layered-puzzle-platformer.csproj
@@ -27,6 +27,9 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4.1" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.4.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JairLib\JairLib.csproj" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
