--- a/layered-puzzle-platformer/layered-puzzle-platformer/layered-puzzle-platformer.csproj
+++ b/layered-puzzle-platformer/layered-puzzle-platformer/layered-puzzle-platformer.csproj
@@ -30,6 +30,9 @@
   <ItemGroup>
     <ProjectReference Include="..\JairLib\JairLib.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\jsonData\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
